# ECE461-Phase2

./: .coverage.pal-nat186-55-238.itap.purdue.edu.58296.XshKUwLx  .dockerignore  .flake8  Dockerfile  PERFORMANCE_REPORT_SUMMARY.md  README.md  RESTLER_IMPLEMENTATION.md  SYSTEM_OVERVIEW.md  TESTS_README.md  amplify.yml  check_lambda_deps.py  coverage.json  coverage_gate.py  dev-start.sh  flake8.txt  flake8_remaining.txt  generate_actual_performance_analysis.py  generate_performance_data.py  lambda_helper.py  load_test_optimized.py  mypy.ini  openapi.yaml  performance_analyzer.py  pyproject.toml  real_performance_analysis.py  real_performance_results.json  registry.py  requirements.txt  run  run_all.bash  run_performance_tests.py  run_restler_tests.py  simple_ada_runner.py  simple_load_test.py  test.sh  test_auth.sh  test_fast_rating.py  test_lambda_handler.py  test_local.py  test_simple.sh  (+1 more)
.github/: dependabot.yml
app/: app.py  audit_logging.py  core.py  db_adapter.py  lambda_handler.py  rate_lim.py  s3_adapter.py  scoring.py  secrets_loader.py  test.py  validation.py
db/: CREDENTIALS.md  artifacts_table.json  dynamodb_setup.py  seed_data.py
docs/: performance_report_draft.md
examples/: input1.txt  output1.txt
restler/: README.md  custom_payloads.json  restler_auth_config.json  restler_config.json
restler_analysis/: fuzz_test_report.html  smoke_results.json
security_analysis/: rate_limit_testing.py  reset_database.py  test_authentication.py
src/: constants.py  main.py  metrics.py
tests/: TESTS_README.md  conftest.py  test_api_endpoints.py  test_backend.py  (+30 more)
(+93 files in other folders)
