[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_model_analyzer"
version = "0.1.0"
authors = [
  { name="Smyan Muranjan", email="smuranja@purdue.edu" },
  { name="Jadden Picardal", email="jpicarda@purdue.edu" },
  { name="Carl Xu", email="xu1743@purdue.edu" },
]
description = "A CLI for trustworthy pre-trained model re-use."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]